--- a/timeline/index.html
+++ b/timeline/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div id="main-container"></div>
+    <div id="timeline"></div>  
     <script src="./app.js"></script>
 </body>
 </html>
